app/static/css/style.css
@font-face
{
font-family: Glyphicon Halflings;
src: url('static/fonts/glyphicons-halflings-regular.svg'),
     url('static/fonts/glyphicons-halflings-regular.eot'),
     url('static/fonts/glyphicons-halflings-regular.ttf'),
     url('static/fonts/glyphicons-halflings-regular.woff')
}

body {
    -webkit-font-smoothing: antialiased;
}


.tile {
    display: inline-block;
    cursor: default;
    border: 1px solid #BBBBBB;
    font-size: 13px;
    width: 150px;
    height: 150px;
    margin: 12px;
    border-radius: 3px;
}

.tile:hover {
    box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.4);
    cursor:pointer;
}

.tile .content {
    height:130px;
    width:100%;
    border-top-left-radius:2px;
    border-top-right-radius:2px;
}

.tile .content .pic {
    position:absolute;
    height:130px;
    width:150px;
    opacity:0.8;
    background-size: cover;
    border-top-left-radius:2px;
    border-top-right-radius:2px;
    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.3) inset;  /* Light shadow: */
}

.tile:hover .content .pic{
    opacity: 1.0;
}

.tile .title {
    height: 20px;
    white-space: nowrap;
    text-align: center;
    padding:3px;
    color: #444444;
    overflow: hidden;
    border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    font-family: 'Open Sans', sans-serif;
}

.tile:hover .title {
    color: yellow;
}

a.tile, a.tile:hover { text-decoration: none; }


/* Tile overrides */
.tile {
    width: 120px;
    height: 200px;
    margin: 12px;
    margin-bottom:6px;
    position:relative; 
}
.tile:hover {
    opacity: 1!important;
}
.tile .banner {
    float: right;
    margin-top: -10px;
    margin-right: -10px;
    padding: 8px;
    background-color: rgba(0,0,0,0.8);
    border-radius: 50px;
    font-size: 20px;
    color: white;
    font-family: verdana, San-Serif;
}
.tile .content .pic {
    height:180px;
    width:120px;
    box-shadow: none;  /*Speeds things up a bit*/
    opacity:0.85;
}

.tile, .tile .content, .tile .content .pic { 
    border-radius:2px; 
}

.tile, .tile .title, .tile:hover { 
    background-color: transparent; 
    box-shadow: none;  
    border:0px;
    color: white;
}

.tile .content {
    height:180px;
    border: 0px;
    box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.4);
}

.tile:hover .content {
    box-shadow: 0px 5px 7px 4px rgba(0, 0, 0, 0.5);
}

.open ul li:hover {cursor: pointer; background-color: #EEE;}

.row .col-md-4 h3 {
    text-align: center;
}

.col-md-4 .glyphicon {
    font-size: 70px;
}

#jumbotron-wrapper {
    margin-bottom: 50px;
    padding: 50px 0px;
}

#jumbotron-wrapper .jumbotron h1, .jumbotron p, #intheaters-wrapper #movies h1, #jumbotron-wrapper .jumbotron h2, #jumbotron-wrapper .jumbotron p a, #theater-results h2 {
    font-family: 'Montserrat', sans-serif;
    color: white;
    text-shadow: 0 0 10px rgba(0,0,0,.5);
}

#jumbotron-wrapper .jumbotron h2 {
    padding-bottom: 20px;
}

#steps-wrapper {
    margin-bottom: 50px;
}

body .navbar {
    margin-bottom: 0px;
}

.divider {
  background: url('../images/divider.jpg');
  width: 100%;
  height: 1px;
  margin: 15px 0px 60px 0px;
}

.col-md-4 p {
    color: #888;
    font-family: 'Roboto', sans-serif;
}

#intheaters-wrapper {
    background-image: url('../images/182.jpg');
    background-position:center; 
}

#jumbotron-wrapper, #theater-results {
    background-image:url('http://i.imgur.com/fkBIlX1.jpg');
    /*background-image: url('../images/51.jpg');*/
    /*background-position: center; */
}

#intheaters-wrapper #movies h1 {
    padding: 40px 0px 10px 0px;
}

#theater-results {
    padding: 50px 0px;
    margin-bottom: 50px;
}

#zip-wrapper {
    background-image:url('../images/27.jpg');
    /*background-image: url('../images/51.jpg');*/
    background-position: center; 
}

#zip-wrapper .jumbotron h2, #zip-wrapper .jumbotron p a {
    font-family: 'Montserrat', sans-serif;
    color: white;
    text-shadow: 0 0 10px rgba(0,0,0,.5);
}

#movies #header p {
    font-family: 'Montserrat', sans-serif;
    color: white;
    padding-bottom: 20px;
    text-shadow: 0 0 10px rgba(0,0,0,.5);
}

#jumbotron-wrapper .jumbotron {
    background-color: transparent;
}

